auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: F:\Work\iifa\kompose-windows-amd64.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: F:\Work\iifa\kompose-windows-amd64.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.service: auth
    spec:
      containers:
        - env:
            - name: KEYCLOAK_PASSWORD
              value: admin
            - name: KEYCLOAK_USER
              value: admin
            - name: PROXY_ADDRESS_FORWARDING
              value: "true"
          image: jboss/keycloak:latest
          name: auth
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /opt/jboss/keycloak/standalone/data/
              name: auth-claim0
      restartPolicy: Always
      volumes:
        - name: auth-claim0
          persistentVolumeClaim:
            claimName: auth-claim0
status: {}
