redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  strategy: {}
  template:
    metadata:
      labels:
        service: redis
    spec:
      containers:
        - image: redis:5.0
          name: redis
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "1"
              memory: 512M
status: {}
