auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: F:\Work\iifa\kompose-windows-amd64.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: auth
status:
  loadBalancer: {}
