capital-resources-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: capital-resources-db
  name: capital-resources-db
spec:
  ports:
    - name: "5432"
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    service: capital-resources-db
