capital-resources-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: capital-resources
  name: capital-resources
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: capital-resources
status:
  loadBalancer: {}
