infrastructure-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: infrastructure
  name: infrastructure
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: infrastructure
status:
  loadBalancer: {}
