main-entry.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-single-pod-service
  labels:
    env: entry
    owner: nntc
spec:
  selector:
    project: kgb # Selecting PODS with those Labels
  ports:
    - name: main-entry-point
      protocol: TCP
      port: 80 # Port on Load Balancer
      targetPort: 80 # Port on POD
  type: LoadBalancer
