entry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entry-ingress

spec:
  rules:
  - host: apolomoshnov.com
    http:
      paths:
      - path: "/capital-resouces"
        pathType: Prefix
        backend:
          service:
            name: capital-resources
            port:
              number: 80

      - path: "/auth"
        pathType: Prefix
        backend:
          service: 
            name: auth
            port:
              number: 8080
